@@ -1,5 +1,11 @@
-2002-06-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+2002-07-04  Cristy  <cristy@mystic.es.dupont.com>
+  * Semaphore.c will compile now when pthreads are not present.
+  * 8-Bit Quantum PCD images now read correctly.
 
+2002-07-01  Cristy  <cristy@mystic.es.dupont.com>
+  * ImageMagick 5.4.7 released.
+
+2002-06-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
   * magick/nt.c (readdir): Make readdir re-entrant for each instance
     of DIR.  This should improve thread safety.
   * ltdl/ltdl.c : Support building as DLL under Win32.
